Add styling for start button and rules

--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <div class="start-btn"></div>
 
+  <body>
+    <!-- Start Quiz Button -->
+    <div class="start-btn">
+      <button>Start Quiz</button>
+    </div>
+    <!-- Info Box -->
+    <div class="info-box">
+      <h1 class="info-title">How It Works</h1>
+
+      <div class="info-list">
+        <ol>
+        <li>Read the questions shown on screen</li>
+        <li>Answer using the multiple choices provided</li>
+        <li>Your score will be show at the end of the quiz!</li>
+          </ol>
+        </div>
+      </div>
+
+      <div class="buttons">
+        <button class="restart">Continue</button>
+      </div>
+    </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
