Add more styling for end screen and end screen text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="end-screen">
         <h3 class="end-text">You've reached the end!</h3>
         <div class="score-text">
-            You got 2 out of 5!
+            You got <p>2</p> out of <p>5</p>!
         </div>
         <div class="buttons">
             <button class="restart">Replay</button>
